--- a/avatar/index.html
+++ b/avatar/index.html
@@ -13,6 +13,8 @@
     <img src="SirPoisonous_monocle.jpg" width="300" >
     <img src="VenomousPrimate_Rajang_Icon.png" width="300" >
     <img src="yoda_high_school.jpg" width="300" >
+    <img src="SlowLorisGreen.png" width="300" >
+    <img src="space_sloth.jpg" width="300" >
 </div>
 </body>
 </html>
