--- a/report/books/book_images_by_year.html
+++ b/report/books/book_images_by_year.html
@@ -33,7 +33,11 @@
 <body>
 
 <div class="title">Book Images by Year</div>
-<div id="container1">
+<div id="container3">
+    <div class="button" id="button-2023">
+        <div id="slide2023"></div>
+        <a href="2023_book_images.html">2023</a>
+    </div>
     <div class="button" id="button-2022">
         <div id="slide2022"></div>
         <a href="2022_book_images.html">2022</a>
@@ -42,6 +46,8 @@
         <div id="slide2021"></div>
         <a href="2021_book_images.html">2021</a>
     </div>
+</div>
+<div id="container2">
     <div class="button" id="button-2020">
         <div id="slide2020"></div>
         <a href="2020_book_images.html">2020</a>
@@ -58,6 +64,8 @@
         <div id="slide2017"></div>
         <a href="2017_book_images.html">2017</a>
     </div>
+</div>
+<div id="container1">
     <div class="button" id="button-2016">
         <div id="slide2016"></div>
         <a href="2016_book_images.html">2016</a>
