--- a/report/books/book_images_by_year.html
+++ b/report/books/book_images_by_year.html
@@ -33,11 +33,13 @@
 <body>
 
 <div class="title">Book Images by Year</div>
-<div id="container3">
+<div id="container6">
     <div class="button" id="button-2023">
         <div id="slide2023"></div>
         <a href="2023_book_images.html">2023</a>
     </div>
+</div>
+<div id="container5">
     <div class="button" id="button-2022">
         <div id="slide2022"></div>
         <a href="2022_book_images.html">2022</a>
@@ -47,7 +49,7 @@
         <a href="2021_book_images.html">2021</a>
     </div>
 </div>
-<div id="container2">
+<div id="container4">
     <div class="button" id="button-2020">
         <div id="slide2020"></div>
         <a href="2020_book_images.html">2020</a>
@@ -56,6 +58,8 @@
         <div id="slide2019"></div>
         <a href="2019_book_images.html">2019</a>
     </div>
+</div>
+<div id="container3">
     <div class="button" id="button-2018">
         <div id="slide2018"></div>
         <a href="2018_book_images.html">2018</a>
@@ -65,7 +69,7 @@
         <a href="2017_book_images.html">2017</a>
     </div>
 </div>
-<div id="container1">
+<div id="container2">
     <div class="button" id="button-2016">
         <div id="slide2016"></div>
         <a href="2016_book_images.html">2016</a>
@@ -74,6 +78,8 @@
         <div id="slide2015"></div>
         <a href="2015_book_images.html">2015</a>
     </div>
+</div>
+<div id="container1">
     <div class="button" id="button-2014">
         <div id="slide2014"></div>
         <a href="2014_book_images.html">2014</a>
