--- a/avatar/index.html
+++ b/avatar/index.html
@@ -10,11 +10,13 @@
     <img src="jedi.jpg" width="300" >
     <img src="mk3lemiremummy_green.jpg" width="300" >
     <img src="SirPoisonous.jpg" width="300" >
-    <img src="SirPoisonous_monocle.jpg" width="300" >
     <img src="VenomousPrimate_Rajang_Icon.png" width="300" >
     <img src="yoda_high_school.jpg" width="300" >
     <img src="SlowLorisGreen.png" width="300" >
-    <img src="space_sloth.jpg" width="300" >
+    <img src="Monkey3.png" width="300" >
+    <img src="Monkey6.png" width="300" >
+    <img src="Monkey8.png" width="300" >
+    <img src="vp.png" width="300" >
 </div>
 </body>
 </html>
