--- a/altitude/index.html
+++ b/altitude/index.html
@@ -43,16 +43,17 @@
     Get Altitude
   </div>
 </div>
-<p id="altitude"></p>
+<h1><p id="altitude"></p></h1>
 
 <script>
   function getUserAltitude() {
     if ('geolocation' in navigator) {
       navigator.geolocation.getCurrentPosition(
               (position) => {
-                const altitude = position.coords.altitude;
-                if (altitude !== null) {
-                  document.getElementById('altitude').innerText = `Your altitude is ${altitude} meters above sea level.`;
+                const altitudeInMeters = position.coords.altitude;
+                if (altitudeInMeters !== null) {
+                  const altitudeInFeet = Math.round(altitudeInMeters * 3.28084);
+                  document.getElementById('altitude').innerText = `Your altitude is ${altitudeInFeet} feet above sea level.`;
                 } else {
                   document.getElementById('altitude').innerText = 'Altitude data not available.';
                 }
