--- a/landing.html
+++ b/landing.html
@@ -82,7 +82,7 @@
     </div>
     <div class="button" id="button-10">
         <div id="slide10"></div>
-        <a href="altitude">Games</a>
+        <a href="altitude">Altitude</a>
     </div>
 </div>
 
