--- a/landing.html
+++ b/landing.html
@@ -86,5 +86,12 @@
     </div>
 </div>
 
+<div id="container6">
+    <div class="button" id="button-11">
+        <div id="slide11"></div>
+        <a href="life">Life</a>
+    </div>
+</div>
+
 </body>
 </html>
