--- a/landing.html
+++ b/landing.html
@@ -78,7 +78,7 @@
 <div id="container5">
     <div class="button" id="button-9">
         <div id="slide9"></div>
-        <a href="games">Games</a>
+        <a href="https://bcps.nutrislice.com/menu/bcps-weekly-menus">BCPS Lunch</a>
     </div>
     <div class="button" id="button-10">
         <div id="slide10"></div>
@@ -90,6 +90,10 @@
     <div class="button" id="button-11">
         <div id="slide11"></div>
         <a href="life">Life</a>
+    </div>
+    <div class="button" id="button-12">
+        <div id="slide12"></div>
+        <a href="games">Games</a>
     </div>
 </div>
 
