--- a/avatar/index.html
+++ b/avatar/index.html
@@ -13,6 +13,7 @@
     <img src="vadervp1.jpg" width="300" >
     <img src="vadervp2.jpg" width="300" >
     <img src="chewyvp1.jpg" width="300" >
+    <img src="chewysoup.jpg" width="300" >
     <img src="jedi.jpg" width="300" >
     <img src="SirPoisonous.jpg" width="300" >
     <img src="VenomousPrimate_Rajang_Icon.png" width="300" >
