--- a/avatar/index.html
+++ b/avatar/index.html
@@ -39,6 +39,7 @@
     <img src="gemini/engine3.jpg" width="300" >
     <img src="gemini/engine4.jpg" width="300" >
     <img src="gemini/engine5.jpg" width="300" >
+    <img src="gemini/engine6.jpg" width="300" >
     <img src="gemini/arc1.jpg" width="300" >
     <img src="gemini/davincicircuit1.jpg" width="300" >
 </div>
