--- a/avatar/index.html
+++ b/avatar/index.html
@@ -40,6 +40,8 @@
     <img src="gemini/engine4.jpg" width="300" >
     <img src="gemini/engine5.jpg" width="300" >
     <img src="gemini/engine6.jpg" width="300" >
+    <img src="gemini/engine7.jpg" width="300" >
+    <img src="gemini/engine8.jpg" width="300" >
     <img src="gemini/arc1.jpg" width="300" >
     <img src="gemini/davincicircuit1.jpg" width="300" >
 </div>
