--- a/avatar/index.html
+++ b/avatar/index.html
@@ -44,6 +44,9 @@
     <img src="gemini/engine8.jpg" width="300" >
     <img src="gemini/arc1.jpg" width="300" >
     <img src="gemini/davincicircuit1.jpg" width="300" >
+    <img src="gemini/hotrod1.jpg" width="300" >
+    <img src="gemini/hotrod2.jpg" width="300" >
+    <img src="gemini/hotrod3.jpg" width="300" >
 </div>
 </body>
 </html>
