--- a/report/books/2025_book_images.html
+++ b/report/books/2025_book_images.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-<img src="nobooks.jpg" width="300" >
+<img src="img/nobooks.jpg" width="300" >
 
 </div>
 </body>
